--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nameit",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://wwww.basth3art.github.io/NAme-it"
+  "homepage": "http://www.basth3art.github.io/NAme-it/",
   "dependencies": {
     "@rstacruz/startup-name-generator": "0.3.0",
     "@testing-library/jest-dom": "^5.16.5",
